Colored Output
- WIP for colored output